Replaced pagepiling.js by fullpage.js

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,43 @@
 
     <main>
         <div class="piling-section-wrapper">
-            <div class="piling-section" data-anchor="/elem-1">1</div>
-            <div class="piling-section" data-anchor="/elem-2">2</div>
-            <div class="piling-section" data-anchor="/elem-3">3</div>
-            <div class="piling-section" data-anchor="/elem-4">4</div>
+
+            <div class="piling-section" data-anchor="/elem-1">
+                <div class="section-layer section-background" style="background-image: url('assets/images/section-01-bg.jpg');"></div>
+                <div class="section-layer section-midground">
+                    <div class="section-headline-wrapper">
+                        <h1>Zuhause<br><span style="margin-left: 1em">unterwegs</span></h1>
+                    </div>
+                </div>
+                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"></div>
+            </div>
+
+            <div class="piling-section" data-anchor="/elem-2">
+                <div class="section-layer section-background" style="background-image: url('assets/images/section-02-bg.jpg');"></div>
+                <div class="section-layer section-midground">
+                    <div class="section-headline-wrapper" style="top: 30%;">
+                        <h1 style="margin-left: -1em">Willkommen</h1>
+                        <h2>in deinem neuen Lebensbegleiter</h2>
+                    </div>
+                </div>
+                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-02-fg.png');">
+                    <div class="section-text-wrapper">
+                        <p>Unsere Campingbusse sind gemütlicher als ein Wohnmobil, sparsamer als eine Limousine und praktischer als ein Kombi. Egal ob du dem Alltag entfliehen oder ihn besser bewältigen möchtest, passen sie in jede Parklücke.</p>
+                        <button>Entdecke Kompanja</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="piling-section" data-anchor="/elem-3">
+                <div class="section-layer section-background" style="background-image: url('assets/images/section-01-bg.jpg');"></div>
+                <div class="section-layer section-midground">
+                    <div class="section-headline-wrapper">
+                        <h1>Zuhause<br><span style="margin-left: 1em">unterwegs</span></h1>
+                    </div>
+                </div>
+                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"></div>
+            </div>
+
         </div>
     </main>
 
