--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                         <h1>Zuhause<br><span style="margin-left: 1em">unterwegs</span></h1>
                     </div>
                 </div>
-                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"></div>
+                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"><div class="section-text-wrapper">&nbsp;</div></div>
             </div>
 
             <div class="piling-section" data-anchor="/elem-2">
@@ -48,7 +48,7 @@
                         <h1>Zuhause<br><span style="margin-left: 1em">unterwegs</span></h1>
                     </div>
                 </div>
-                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"></div>
+                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"><div class="section-text-wrapper">&nbsp;</div></div>
             </div>
 
         </div>
