Minor styling adjustments, added header nav

--- a/public/index.html
+++ b/public/index.html
@@ -4,32 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renault Kompanja</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="dist/bundle.min.css" />
 </head>
 <body>
 
     <header>
-        <nav></nav>
+        <a href="index.html" class="logo"></a>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Kompanja</a></li>
+                <li><a href="#">Familie</a></li>
+                <li><a href="#">Van</a></li>
+                <li><a href="#">Kennenlernen</a></li>
+                <li><a href="#">Helpdesk</a></li>
+            </ul>
+        </nav>
+        <div class="price-block"></div>
     </header>
 
     <main>
         <div class="piling-section-wrapper">
 
-            <div class="piling-section" data-anchor="/elem-1">
+            <div class="piling-section" data-anchor="/zuhause-unterwegs">
                 <div class="section-layer section-background" style="background-image: url('assets/images/section-01-bg.jpg');"></div>
                 <div class="section-layer section-midground">
                     <div class="section-headline-wrapper">
-                        <h1>Zuhause<br><span style="margin-left: 1em">unterwegs</span></h1>
+                        <h1>Zuhause<br><span>unterwegs</span></h1>
                     </div>
                 </div>
                 <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"><div class="section-text-wrapper">&nbsp;</div></div>
             </div>
 
-            <div class="piling-section" data-anchor="/elem-2">
+            <div class="piling-section" data-anchor="/willkommen">
                 <div class="section-layer section-background" style="background-image: url('assets/images/section-02-bg.jpg');"></div>
                 <div class="section-layer section-midground">
-                    <div class="section-headline-wrapper" style="top: 30%;">
-                        <h1 style="margin-left: -1em">Willkommen</h1>
+                    <div class="section-headline-wrapper">
+                        <h1>Willkommen</h1>
                         <h2>in deinem neuen Lebensbegleiter</h2>
                     </div>
                 </div>
@@ -41,11 +53,11 @@
                 </div>
             </div>
 
-            <div class="piling-section" data-anchor="/elem-3">
+            <div class="piling-section" data-anchor="/zuhause-unterwegs-duplicate">
                 <div class="section-layer section-background" style="background-image: url('assets/images/section-01-bg.jpg');"></div>
                 <div class="section-layer section-midground">
                     <div class="section-headline-wrapper">
-                        <h1>Zuhause<br><span style="margin-left: 1em">unterwegs</span></h1>
+                        <h1>Zuhause<br><span>unterwegs</span></h1>
                     </div>
                 </div>
                 <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"><div class="section-text-wrapper">&nbsp;</div></div>
