--- a/public/index.html
+++ b/public/index.html
@@ -53,14 +53,26 @@
                 </div>
             </div>
 
-            <div class="piling-section" data-anchor="/zuhause-unterwegs-duplicate">
-                <div class="section-layer section-background" style="background-image: url('assets/images/section-01-bg.jpg');"></div>
+            <div class="piling-section" data-anchor="/raumwunder">
+                <div class="section-layer section-background" style="background-image: url('assets/images/section-03-bg.jpg');"></div>
                 <div class="section-layer section-midground">
                     <div class="section-headline-wrapper">
-                        <h1>Zuhause<br><span>unterwegs</span></h1>
+                        <h2>Ein echtes</h2>
+                        <h1>Raumwunder</h1>
                     </div>
                 </div>
-                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-01-fg.png');"><div class="section-text-wrapper">&nbsp;</div></div>
+                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-03-fg.png');"><div class="section-text-wrapper">&nbsp;</div></div>
+            </div>
+
+            <div class="piling-section" data-anchor="/familie">
+                <div class="section-layer section-background" style="background-image: url('assets/images/section-04-bg.jpg');"></div>
+                <div class="section-layer section-midground">
+                    <div class="section-headline-wrapper">
+                        <h2>Werde Teil der</h2>
+                        <h1>Familie</h1>
+                    </div>
+                </div>
+                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-04-fg.png');"><div class="section-text-wrapper">&nbsp;</div></div>
             </div>
 
         </div>
