--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,23 @@
                         <h1>Familie</h1>
                     </div>
                 </div>
-                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-04-fg.png');"><div class="section-text-wrapper">&nbsp;</div></div>
+                <div class="section-layer section-foreground" style="background-image: url('assets/images/section-04-fg.png');">
+                    <div class="section-footer">
+                        <a href="index.html" class="logo"></a>
+                        <nav>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Kompanja</a></li>
+                                <li><a href="#">Familie</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#">Van</a></li>
+                                <li><a href="#">Kennenlernen</a></li>
+                                <li><a href="#">Helpdesk</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
             </div>
 
         </div>
